--- a/Simon Game.html
+++ b/Simon Game.html
@@ -4,6 +4,10 @@
 
 <link rel="stylesheet" type="text/css" href="Simon Game.css">
 
+<!-- KK: The $ alias was used in `Simon Game.js` but jQuery was not included
+so it was throwing an undefined error -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
 <script src="Simon Game.js"></script>
 
 <title>	
@@ -29,8 +33,9 @@
         </div>
 
         <div class="row-two">
-    <!----> <div class="count-display">
-              <div id="number">8888888888888888</div>
+          <div class="count-display">
+              <!-- KK: In my testing, the number of 8's in here needed to be reduced to not make the display overflow the device width --> 
+              <div id="number">8888888888</div>
             </div>
         </div>
 
